config/operator/global/operator.template.yaml
# Very similar to a namespace operator, but with
# a different service account and different run arguments
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elastic-global-operator
  namespace: <NAMESPACE>
  labels:
    control-plane: elastic-global-operator
spec:
  selector:
    matchLabels:
      control-plane: elastic-global-operator
  serviceName: elastic-global-operator
  template:
    metadata:
      labels:
        control-plane: elastic-global-operator
    spec:
      serviceAccountName: elastic-global-operator
      containers:
      - image: <OPERATOR_IMAGE>
        name: manager
        args: ["manager", "--operator-roles", "global,webhook"]
        resources:
          limits:
            cpu: 1
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 20Mi
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        volumeMounts:
          - mountPath: /tmp/k8s-webhook-server/serving-certs
            name: cert
            readOnly: true
      terminationGracePeriodSeconds: 10
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: elastic-webhook-server-cert
